Fixed IE7 layout problem with the 'New' dialog in the sitemap editor.

--- a/src-gwt/org/opencms/gwt/client/ui/css/tabbedPanel.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/tabbedPanel.css
@@ -23,6 +23,10 @@
 	display: block;
 }
 
+.buttonTabs .gwt-TabLayoutPanelTabs {
+	height: 24px !important; 
+}
+
 @sprite .buttonTabs.gwt-TabLayoutPanel .gwt-TabLayoutPanelContent {
 	gwt-image: "backgrounds.dialogBackgroundShadow";
     background-color: value("constants.css.backgroundColorMenu");
